--- a/css/dashstyles.css
+++ b/css/dashstyles.css
@@ -1,13 +1,8 @@
 html, body {
-  font-family: 'Open Sans', serif;
-  font-size: 16px;
-  line-height: 1.5;
-  height: 100%;
-background: linear-gradient(315deg, rgba(0, 0, 0, 0.51) 0%, rgba(12, 167, 173, 0.96) 45%, rgb(12, 167, 173) 50%, rgba(12, 167, 173, 0.96) 53%, rgba(0, 0, 0, 0.51) 100%)
-}
-nav.navbar {
-  border-top: 4px solid #276cda;
-  margin-bottom: 1rem;
+font-family: 'Lato', sans-serif;  font-size: 16px;
+background: linear-gradient(315deg, rgba(0, 0, 0, 0.51) 0%, rgba(12, 167, 173, 0.96) 45%, rgb(12, 167, 173) 50%, rgba(12, 167, 173, 0.96) 53%, rgba(0, 0, 0, 0.51) 100%);
+background-repeat: no-repeat;
+background-size: auto;
 }
 .navbar-item.brand-text {
   font-weight: 300;
@@ -18,7 +13,7 @@ nav.navbar {
 }
 .columns {
   width: 100%;
-  height: 100%;
+
 }
 .menu-label {
   color: #8F99A3;
@@ -28,15 +23,6 @@ nav.navbar {
 .menu-list a {
   color: #0F1D38;
   font-size: 14px;
-  font-weight: 700;
-}
-.menu-list a:hover {
-  background-color: transparent;
-  color: #276cda;
-}
-.menu-list a.is-active {
-  background-color: transparent;
-  color: #276cda;
   font-weight: 700;
 }
 .card {
@@ -69,12 +55,22 @@ nav.navbar {
   font-weight: 700;
   color: #8F99A3;
 }
-.card-footer-item:hover {
-}
+
 .card-table .table {
   margin-bottom: 0;
 }
 .events-card .card-table {
   max-height: 250px;
   overflow-y: scroll;
+}
+
+.navs:hover {
+  background-color: rgb(78, 87, 116) !important;
+}
+
+.front-copy {
+  line-height: 35px !important;
+}
+.about-copy {
+  padding-top: 40px !important;
 }
